risk-scaling and figure for data section

--- a/notebooks/03_graph_and_routing.ipynb
+++ b/notebooks/03_graph_and_routing.ipynb
@@ -49,13 +49,13 @@
     "from src.routing_graph import (\n",
     "    GraphBuildConfig,\n",
     "    RiskConfig,\n",
-    "    RoutingMonthArtifacts,\n",
-    "    build_routing_graph_for_month,\n",
-    "    build_graph_with_risk_for_month,\n",
+    "    RoutingGraphArtifacts,\n",
+    "    build_routing_graph,\n",
+    "    build_graph_with_risk,\n",
     "    verify_graph_sanity,\n",
     "    NodeKey,\n",
     ")\n",
-    "from src.routing_algorithms import (\n",
+    "from src.routing_algorithm import (\n",
     "    nearest_graph_node,\n",
     "    route_stats,\n",
     "    shortest_path_by,\n",
@@ -294,9 +294,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15394</th>\n",
-       "      <td>21785</td>\n",
+       "      <td>19908</td>\n",
        "      <td>2021</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
        "      <td>POINT (13.55801 52.45571)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>work_hours (7h-18h)</td>\n",
@@ -313,9 +313,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15395</th>\n",
-       "      <td>19908</td>\n",
+       "      <td>21785</td>\n",
        "      <td>2021</td>\n",
-       "      <td>3</td>\n",
+       "      <td>7</td>\n",
        "      <td>POINT (13.55801 52.45571)</td>\n",
        "      <td>weekday</td>\n",
        "      <td>work_hours (7h-18h)</td>\n",
@@ -346,8 +346,8 @@
        "15391    3319  2019      8  POINT (13.21397 52.53838)      weekday   \n",
        "15392    6510  2020      4  POINT (13.32488 52.50253)      weekday   \n",
        "15393   22519  2021      9  POINT (13.45723 52.56107)      weekday   \n",
-       "15394   21785  2021      7  POINT (13.55801 52.45571)      weekday   \n",
-       "15395   19908  2021      3  POINT (13.55801 52.45571)      weekday   \n",
+       "15394   19908  2021      3  POINT (13.55801 52.45571)      weekday   \n",
+       "15395   21785  2021      7  POINT (13.55801 52.45571)      weekday   \n",
        "\n",
        "               time_of_day  light_condition  accident_type  accident_kind  \\\n",
        "0      work_hours (7h-18h)                0              5              1   \n",
@@ -485,8 +485,6 @@
    "outputs": [],
    "source": [
     "# Example origin-destination routing for Berlin\n",
-    "year = 2021\n",
-    "month = 6\n",
     "metric_epsg = 32633\n",
     "ETA = 1.0\n",
     "EPS = 0.10\n",
@@ -499,8 +497,6 @@
     "    segments_panel_gdf=segments_df,\n",
     "    crossings_gdf=crossings_gdf,\n",
     "    junction_panel_gdf=junction_df,\n",
-    "    year=year,\n",
-    "    month=month,\n",
     "    origin_lonlat=origin_lonlat,\n",
     "    dest_lonlat=dest_lonlat,\n",
     "    eps=EPS,\n",
@@ -508,19 +504,18 @@
     ")\n",
     "\n",
     "if result_berlin.get(\"status\") == \"disconnected\":\n",
-    "    raise RuntimeError(f\"OD pair disconnected for {year}-{month} after exposure filtering.\")\n",
+    "    raise RuntimeError(\"OD pair disconnected in the routing graph.\")\n",
     "\n",
     "G = result_berlin.get(\"graph\", None)\n",
     "if G is None:\n",
     "    # fallback \n",
-    "    artifacts = build_graph_with_risk_for_month(\n",
-    "        segments_panel_gdf=segments_df,\n",
+    "    artifacts = build_graph_with_risk(\n",
+    "        segments_gdf=segments_df,\n",
     "        crossings_gdf=crossings_gdf,\n",
-    "        junction_panel_gdf=junction_df,\n",
-    "        year=year,\n",
-    "        month=month,\n",
+    "        junction_gdf=junction_df,\n",
     "        risk_cfg=RiskConfig(eta=ETA),\n",
     "    )\n",
+    "\n",
     "    G = artifacts.G\n",
     "\n",
     "# Shortest path geometry: choose_by length\n",
@@ -552,16 +547,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'n_nodes': 3010, 'n_edges': 4221, 'seg_risk_min': 0.032740729463619146, 'seg_risk_median': 1.0, 'seg_risk_max': 50.79079727780798, 'risk_total_median': 2.0, 'risk_total_max': 51.79079727780798, 'length_median': 368.67571338012334, 'node_penalty_nonzero_share': 0.9983416252072969, 'graph_node_ids_attached': 2835, 'notes': 'Attached node_id to 2835/3010 graph nodes (snap<= 20.0m). Risk objective uses eta=1.0 for junction penalty weighting.'}\n",
+      "{'n_nodes': 3048, 'n_edges': 4335, 'seg_risk_min': 2.1921227354338257e-07, 'seg_risk_median': 5.265051380918785e-05, 'seg_risk_max': 0.004930354303062096, 'risk_total_median': 0.00011021206386569035, 'risk_total_max': 0.004983293192078483, 'length_median': 372.42039723715783, 'node_penalty_nonzero_share': 0.9983852364475202, 'graph_node_ids_attached': 2862, 'notes': 'Attached node_id to 2862/3048 graph nodes (snap<= 20.0m). Risk objective uses eta=1.0 for junction penalty weighting.'}\n",
       "          delta_L     delta_R\n",
       "count  300.000000  300.000000\n",
-      "mean     0.033051    0.165366\n",
-      "std      0.030778    0.139595\n",
+      "mean     0.032753    0.304537\n",
+      "std      0.028940    0.213010\n",
       "min      0.000000    0.000000\n",
-      "25%      0.004730    0.035331\n",
-      "50%      0.026314    0.148192\n",
-      "75%      0.055243    0.255096\n",
-      "max      0.098441    0.560290\n"
+      "25%      0.006007    0.126384\n",
+      "50%      0.027830    0.315455\n",
+      "75%      0.053915    0.469907\n",
+      "max      0.099532    0.823890\n"
      ]
     }
    ],
@@ -618,8 +613,6 @@
     "    segments_panel_gdf: gpd.GeoDataFrame,\n",
     "    crossings_gdf: gpd.GeoDataFrame,\n",
     "    junction_panel_gdf: gpd.GeoDataFrame,\n",
-    "    year: int,\n",
-    "    month: int,\n",
     "    n_pairs: int = 200,\n",
     "    eps: float = 0.10,\n",
     "    eta: float = 1.0, # junction importance\n",
@@ -636,10 +629,8 @@
     "\n",
     "    Returns a DataFrame with per-OD statistics + metadata.\n",
     "    \"\"\"\n",
-    "    artifacts = build_graph_with_risk_for_month(\n",
+    "    artifacts = build_graph_with_risk(\n",
     "        segments_panel_gdf,\n",
-    "        year,\n",
-    "        month,\n",
     "        crossings_gdf=crossings_gdf,\n",
     "        junction_panel_gdf=junction_panel_gdf,\n",
     "        graph_cfg=GraphBuildConfig(metric_epsg=metric_epsg),\n",
@@ -719,8 +710,6 @@
     "    # Metadata for reproducibility\n",
     "    df.attrs[\"graph_sanity\"] = sanity\n",
     "    df.attrs[\"notes\"] = artifacts.notes\n",
-    "    df.attrs[\"year\"] = year\n",
-    "    df.attrs[\"month\"] = month\n",
     "    df.attrs[\"eps\"] = eps\n",
     "    df.attrs[\"eta\"] = eta\n",
     "    df.attrs[\"seed\"] = seed\n",
@@ -738,7 +727,6 @@
     "    segments_panel_gdf=segments_df,\n",
     "    crossings_gdf=crossings_gdf,\n",
     "    junction_panel_gdf=junction_df,\n",
-    "    year=2021, month=6,\n",
     "    n_pairs=300,\n",
     "    eps=0.10,\n",
     "    eta=1.0,             \n",
@@ -759,70 +747,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c5e849d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "results = []\n",
     "\n",
-    "ETA = 1.0        \n",
-    "EPS = 0.10       \n",
+    "ETA_LIST = [0.0, 0.5, 1.0]\n",
+    "EPS_LIST = [0.05, 0.10, 0.20]\n",
     "N_PAIRS = 200\n",
     "\n",
-    "for (year, month), _ in segments_df.groupby([\"year\", \"month\"]):\n",
-    "    try:\n",
-    "        eval_df = evaluate_many_od_pairs(\n",
-    "            segments_panel_gdf=segments_df,\n",
-    "            crossings_gdf=crossings_gdf,\n",
-    "            junction_panel_gdf=junction_df,\n",
-    "            year=year,\n",
-    "            month=month,\n",
-    "            n_pairs=N_PAIRS,\n",
-    "            eps=EPS,\n",
-    "            eta=ETA,                \n",
-    "        )\n",
-    "    except ValueError as e:\n",
-    "        # e.g. no reachable OD pairs in this month\n",
-    "        print(f\"[skip] {year}-{month}: {e}\")\n",
-    "        continue\n",
+    "for ETA in ETA_LIST:\n",
+    "    for EPS in EPS_LIST:\n",
+    "        try:\n",
+    "            eval_df = evaluate_many_od_pairs(\n",
+    "                segments_panel_gdf=segments_df,\n",
+    "                crossings_gdf=crossings_gdf,\n",
+    "                junction_panel_gdf=junction_df,\n",
+    "                n_pairs=N_PAIRS,\n",
+    "                eps=EPS,\n",
+    "                eta=ETA,\n",
+    "            )\n",
+    "        except ValueError as e:\n",
+    "            print(f\"[skip] eta={ETA}, eps={EPS}: {e}\")\n",
+    "            continue\n",
     "\n",
-    "    if len(eval_df) == 0:\n",
-    "        print(f\"[skip] {year}-{month}: empty evaluation frame\")\n",
-    "        continue\n",
+    "        if len(eval_df) == 0:\n",
+    "            print(f\"[skip] eta={ETA}, eps={EPS}: empty evaluation frame\")\n",
+    "            continue\n",
     "\n",
-    "    eval_df[\"year\"] = year\n",
-    "    eval_df[\"month\"] = month\n",
-    "    eval_df[\"eta\"] = ETA\n",
-    "    eval_df[\"eps\"] = EPS\n",
-    "\n",
-    "    results.append(eval_df)\n",
+    "        eval_df[\"eta\"] = ETA\n",
+    "        eval_df[\"eps\"] = EPS\n",
+    "        eval_df[\"n_pairs_target\"] = N_PAIRS\n",
+    "        results.append(eval_df)\n",
     "\n",
     "if len(results) == 0:\n",
-    "    raise RuntimeError(\"No valid OD-pair evaluations across any month.\")\n",
+    "    raise RuntimeError(\"No valid OD-pair evaluations.\")\n",
     "\n",
-    "all_months_eval = pd.concat(results, ignore_index=True)\n"
+    "all_eval = pd.concat(results, ignore_index=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "77f61de3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "all_months_eval.attrs if hasattr(all_months_eval, \"attrs\") else \"attrs lost on concat\""
+    "all_eval.attrs if hasattr(all_eval, \"attrs\") else \"attrs lost on concat\""
    ]
   }
  ],
