--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -172,10 +172,18 @@ integrates network-level risk into safety-aware routing under a bounded detour c
 \section{Data}\label{sec:data}
 % In this section, describe \emph{what you did}. Roughly speaking, explain what data you worked with, how or from where it was collected, it's structure and size. Explain your analysis, and any specific choices you made in it. Depending on the nature of your project, you may focus more or less on certain aspects. If you collected data yourself, explain the collection process in detail. If you downloaded data from the net, show an exploratory analysis that builds intuition for the data, and shows that you know the data well. If you are doing a custom analysis, explain how it works and why it is the right choice. If you are using a standard tool, it may still help to briefly outline it. Cite relevant works. You can use the \verb|\citep| and \verb|\citet| commands for this purpose \citep{mackay2003information}.
 We combine police-recorded bicycle crashes with measured cyclist exposure for the city of Berlin. Crash data are drawn from the Berlin subset of the German \emph{Unfallatlas}~\citep{Unfallatlas2025} 
-and filtered for bicycle-related incidents. Exposure comes from a city-wide dataset of measured bicycle volumes aggregated at the street-segment level~\citep{kaiser2025spatiotemporalgraphneuralnetwork}. 
+and filtered for bicycle-related incidents. Exposure comes from a city-wide dataset of measured bicycle volumes aggregated at the street-segment level~\citep{kaiser2025spatiotemporalgraphneuralnetwork}.
+We further evaluate how well cyclist volumes derived from Strava align with measurements from official bicycle counting stations (see \cref{fig:segment_share}).
 The street network is represented as polyline segments with associated monthly cyclist counts. The resulting dataset spans 2019--2023 and covers 4{,}335 street segments and 2{,}862 junctions, 
 with 15{,}396 recorded bicycle crashes. At monthly resolution the data are sparse: in a typical month fewer than 5\% of segments and about 3\% of junctions record at least one crash, and 
 some periods include segments with zero measured exposure.\todo{verify the percentages}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics{figs/segment_share.pdf}
+  \caption{Alignment between official bicycle counts and Strava-derived cyclist volumes at the street-segment level in 2023. Points show segment-wise shares of total annual counts, with the dashed line indicating perfect agreement between the two sources.}
+  \label{fig:segment_share}
+\end{figure}
 
 To enable network-scale analysis, all layers are harmonized to a common street-network topology and a projected coordinate reference system. Crash locations are matched to segments using 
 nearest-segment assignment. To capture the concentration of crashes at intersections, we identify junctions as nodes where at least three segments meet; crashes within a fixed radius are 
@@ -185,76 +193,88 @@ approach is applied as described in \cref{sec:methods}. The resulting yearly seg
 
 \section{Methods}\label{sec:methods}
 \paragraph{Empirical Bayes relative risk.}
-For each street segment $s$ and month $t$, let $A_{s,t}$ denote the number of police-recorded bicycle crashes and $E_{s,t}$ the measured cyclist exposure. We assume that, within a given month, crash incidence is proportional to exposure under a ``no special risk'' baseline, yielding the expected number of crashes
+For each network entity $i$, either a street segment or a junction, and month $t$, let $A_{i,t}$ denote the number of police-recorded bicycle crashes and $E_{i,t}$ the measured cyclist exposure. We assume that, within a given month, crash incidence is proportional to exposure under a ``no special risk'' baseline. This yields the expected number of crashes
 \[
-\widehat{A}_{s,t}
-= A_{t}\,\frac{E_{s,t}}{E_{t}},
+\widehat{A}_{i,t}
+= A_{\cdot t}\,\frac{E_{i,t}}{E_{\cdot t}},
 \qquad
-A_{t}=\sum_{s} A_{s,t},\ \ E_{t}=\sum_{s} E_{s,t}.
+A_{\cdot t}=\sum_{i} A_{i,t},\ \ E_{\cdot t}=\sum_{i} E_{i,t},
 \]
+where sums are taken over all segments and junctions. Segment-level and junction-level crashes are disjoint by construction, so the pooled totals $A_{\cdot t}$ and $E_{\cdot t}$ define a shared baseline.
 
-Although crashes and exposure are aggregated at monthly resolution in preprocessing, sparse observations motivate estimating relative risk at yearly resolution. For each year $y$ comprising months $\mathcal{T}(y)$, we pool monthly aggregates to yearly totals
+Although crashes and exposure are aggregated at monthly resolution in preprocessing, routing requires a stable long-run risk surface. We therefore pool monthly quantities across the full study period to obtain
 \[
-A_{s,y}=\sum_{t\in\mathcal{T}(y)} A_{s,t},
+A_i=\sum_t A_{i,t},
 \qquad
-E_{s,y}=\sum_{t\in\mathcal{T}(y)} E_{s,t},
+E_i=\sum_t E_{i,t},
 \]
-and define $A_y=\sum_s A_{s,y}$ and $E_y=\sum_s E_{s,y}$. The corresponding baseline expectation is
+and define the corresponding baseline expectation
 \[
-\widehat{A}_{s,y}
-= A_y\,\frac{E_{s,y}}{E_y}.
+\widehat{A}_i
+= A_\cdot\,\frac{E_i}{E_\cdot},
+\qquad
+A_\cdot=\sum_i A_i,\ \ E_\cdot=\sum_i E_i.
 \]
 
-To obtain stable estimates under sparse observations, we introduce a latent relative-risk multiplier $\theta_{s,y}$ and model
+To stabilize estimation under sparse observations, we introduce a latent relative-risk multiplier $\theta_i$ and model
 \[
-\begin{aligned}
-A_{s,y} \mid \theta_{s,y} &\sim \text{Poisson}(\widehat{A}_{s,y}\,\theta_{s,y}), \\
-\theta_{s,y} &\sim \text{Gamma}(\alpha,\alpha),
-\end{aligned}
+A_i \mid \theta_i \sim \text{Poisson}(\widehat{A}_i\,\theta_i),
+\qquad
+\theta_i \sim \text{Gamma}(\alpha,\alpha),
 \]
-where the Gamma distribution is parameterized in shape--rate form, enforcing a unit prior mean
-$\mathbb{E}[\theta_{s,y}]=1$. The hyperparameter $\alpha$ is estimated via empirical Bayes by maximizing the marginal likelihood pooled across all segments and years. By conjugacy, the posterior mean
+where the Gamma distribution is parameterized in shape--rate form, enforcing a unit prior mean $\mathbb{E}[\theta_i]=1$. The hyperparameter $\alpha$ is estimated from the pooled data using a method-of-moments estimator. By conjugacy, the posterior mean
 \[
-r_{s,y}
-= \mathbb{E}[\theta_{s,y}\mid A_{s,y},\widehat{A}_{s,y}]
-= \frac{A_{s,y}+\alpha}{\widehat{A}_{s,y}+\alpha}
+r_i
+= \mathbb{E}[\theta_i \mid A_i,\widehat{A}_i]
+= \frac{A_i+\alpha}{\widehat{A}_i+\alpha}
 \]
-serves as our smoothed segment-level relative risk. This estimator shrinks extreme values toward $1$, with stronger shrinkage for segments with low expected crash counts.
+serves as our Empirical Bayes smoothed relative risk. This estimator shrinks extreme values toward $1$, with stronger shrinkage for entities with low expected crash counts.
 
-To capture the concentration of crashes near intersections, we also estimate junction-level relative risk. A junction is defined as any network node with degree $\ge 3$; crashes within a fixed radius of its centroid are assigned to that junction. Because a traversal typically contributes exposure to two incident segments (entering and exiting), we approximate junction exposure by a half-sum of incident segment exposures,
+To capture the concentration of crashes near intersections, we estimate junction-level relative risk analogously. A junction is defined as any network node with degree $\ge 3$, and crashes within a fixed radius of its centroid are assigned to that junction. Because a traversal typically contributes exposure to two incident segments, entering and exiting, we approximate junction exposure by a half-sum of incident segment exposures,
 \begin{equation}
 \label{eq:half-sum}
-E_{v,y}=\tfrac{1}{2}\sum_{s\in\mathcal{I}(v)}E_{s,y},
+E_v=\tfrac{1}{2}\sum_{s\in\mathcal{I}(v)} E_s,
 \end{equation}
-which avoids double-counting. Aggregating exposure over incident links is common when turning movements are unavailable~\citep{hakkert2002uses,WANG2020105838}. The expected number of junction crashes is defined as $\widehat{A}_{v,y}=A_y E_{v,y}/E_y$, and junction relative risk $r_{v,y}$ is estimated using the same Empirical Bayes formulation and hyperparameters as for segments. All risks are estimated independently by year.
+which avoids double-counting. Aggregating exposure over incident links is common when turning movements are unavailable~\citep{hakkert2002uses,WANG2020105838}. Junction crashes and exposures enter the same pooled Empirical Bayes formulation as segments.
+
+\paragraph{Risk rescaling for routing.}
+Relative risk estimates are dimensionless and reflect risk conditional on exposure. To obtain additive weights suitable for routing, we rescale relative risk by the pooled baseline crash rate
+\[
+\bar{\lambda}=\frac{A_\cdot}{E_\cdot}.
+\]
+The resulting entity-level routing weight is
+\[
+w_i=\bar{\lambda}\,r_i,
+\]
+which can be interpreted as an exposure-adjusted crash rate up to a global constant. This rescaling preserves relative differences in risk while yielding quantities that aggregate naturally along routes.
 
 \paragraph{Routing graph.}
-For each year $y$, we build an undirected graph $G_y=(V_y,E_y)$ from the street network: nodes represent segment endpoints and edges represent street segments with length $\ell_e$. Each graph edge $e$ corresponds to a street segment $s$ and inherits its estimated yearly risk, denoted $r_{e,y}=r_{s,y}$. Junction identifiers and risks are mapped to nodes via spatial snapping in a projected coordinate system, yielding a year-specific, risk-annotated network.
+We build an undirected graph $G=(V,E)$ from the street network. Nodes represent segment endpoints and edges represent street segments with length $\ell_e$. Each graph edge $e$ corresponds to a street segment $s$ and inherits its routing weight, denoted $w_e=w_s$. Junction identifiers and weights are mapped to nodes via spatial snapping in a projected coordinate system, yielding a single risk-annotated network.
 
 \paragraph{Safety-aware routing.}
-We compare shortest-distance routes with alternatives that reduce estimated crash risk under a bounded detour. For year $y$, the length of a route $P$ is
+We compare shortest-distance routes with alternatives that reduce estimated crash risk under a bounded detour. The length of a route $P$ is
 \[
 L(P)=\sum_{e\in P}\ell_e.
 \]
-To account for both segment- and junction-level exposure, the risk contribution of edge $e=(u,v)$ is defined as
+To account for both segment-level and junction-level risk, the risk contribution of edge $e=(u,v)$ is defined as
 \[
-\rho_{e,y}=r_{e,y}+\eta\,\frac{r_{u,y}+r_{v,y}}{2},
+\rho_e = w_e + \eta\,\frac{w_u+w_v}{2},
 \]
-where $r_{u,y}$ and $r_{v,y}$ are junction risks (set to zero for non-junction nodes) and $\eta\ge 0$ weights the contribution of junction risk. We interpret these relative-risk weights as an \emph{additive surrogate} for cumulative route risk, not as probabilities.
+where $w_u$ and $w_v$ are junction routing weights, set to zero for non-junction nodes, and $\eta\ge 0$ controls the contribution of junction risk. We interpret these quantities as an additive surrogate for cumulative route risk, not as probabilities.
 
 Given an origin--destination pair, the baseline route $P_{\text{dist}}$ minimizes $L(P)$. The safety-aware route solves
 \begin{equation}
 \label{eq:safe-routing}
 \begin{aligned}
-P_{\text{safe}}=\arg\min_{P}\ & R(P)=\sum_{e\in P}\rho_{e,y} \\
+P_{\text{safe}}=\arg\min_{P}\ & R(P)=\sum_{e\in P}\rho_e \\
 \text{s.t.}\ & L(P)\le (1+\varepsilon)\,L(P_{\text{dist}}),
 \end{aligned}
 \end{equation}
-where $\varepsilon$ is the allowable relative detour. We approximate this constrained problem using a weighted-sum sweep: for $\lambda\in\Lambda$,
+where $\varepsilon$ is the allowable relative detour~\citep{ehrgott2005multicriteria}. We approximate this constrained problem using a weighted-sum sweep. For $\lambda\in\Lambda$,
 \[
-P(\lambda)=\arg\min_{P}\sum_{e\in P}\bigl(\rho_{e,y}+\lambda\,\ell_e\bigr),
+P(\lambda)=\arg\min_{P}\sum_{e\in P}\bigl(\rho_e+\lambda\,\ell_e\bigr),
 \]
-then select among feasible candidates the route with minimal $R(P)$, breaking ties by shorter $L(P)$. Shortest paths are computed using Dijkstra’s algorithm. Routing is performed independently by year.
+then select among feasible candidates the route with minimal $R(P)$, breaking ties by shorter $L(P)$. Shortest paths are computed using Dijkstra’s algorithm.
 
 \paragraph{Evaluation metrics.}
 For each origin--destination pair, we report the relative length increase
@@ -265,7 +285,7 @@ and the relative risk reduction
 \[
 \Delta_R=\frac{R(P_{\text{dist}})-R(P_{\text{safe}})}{R(P_{\text{dist}})}.
 \]
-Pairs with $R(P_{\text{dist}})=0$ are excluded from $\Delta_R$ due to an undefined denominator. These metrics quantify how bounded detours trade distance for reductions in relative crash risk.
+Pairs with $R(P_{\text{dist}})=0$ are excluded from $\Delta_R$ due to an undefined denominator. These metrics quantify how bounded detours trade distance for reductions in exposure-adjusted crash risk.
 
 \section{Related work.}\label{sec:relatedw}
 Prior work has aimed to avoid conflating danger with demand by normalizing bicycle crashes by cyclist exposure~\citep{luecken2018}. City-scale studies demonstrate that exposure-normalized risk 
