edited figure 1, run algortihm evaluation and added table and  some draft text to results section

--- a/notebooks/03_graph_and_routing.ipynb
+++ b/notebooks/03_graph_and_routing.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "33cbdbce",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "dcc22668",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "[15396 rows x 16 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "7d7398e8",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "a543dd86",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "807a5030",
    "metadata": {},
    "outputs": [
@@ -746,8 +746,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fa9aadc",
+   "metadata": {},
+   "source": [
+    "Following [Natera Orozco et al. (2020)](https://doi.org/10.1098/rsos.201130), we evaluate our routing algorithm using `N_PAIRS = 1000` randomly selected origin-destination pairs."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "c5e849d9",
    "metadata": {},
    "outputs": [],
@@ -756,7 +764,7 @@
     "\n",
     "ETA_LIST = [0.0, 0.5, 1.0]\n",
     "EPS_LIST = [0.05, 0.10, 0.20]\n",
-    "N_PAIRS = 200\n",
+    "N_PAIRS = 1000\n",
     "\n",
     "for ETA in ETA_LIST:\n",
     "    for EPS in EPS_LIST:\n",
@@ -773,16 +781,17 @@
     "            print(f\"[skip] eta={ETA}, eps={EPS}: {e}\")\n",
     "            continue\n",
     "\n",
-    "        if len(eval_df) == 0:\n",
+    "        if eval_df is None or len(eval_df) == 0:\n",
     "            print(f\"[skip] eta={ETA}, eps={EPS}: empty evaluation frame\")\n",
     "            continue\n",
     "\n",
+    "        eval_df = eval_df.copy()\n",
     "        eval_df[\"eta\"] = ETA\n",
     "        eval_df[\"eps\"] = EPS\n",
     "        eval_df[\"n_pairs_target\"] = N_PAIRS\n",
     "        results.append(eval_df)\n",
     "\n",
-    "if len(results) == 0:\n",
+    "if not results:\n",
     "    raise RuntimeError(\"No valid OD-pair evaluations.\")\n",
     "\n",
     "all_eval = pd.concat(results, ignore_index=True)\n"
@@ -790,12 +799,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "77f61de3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "all_eval.attrs if hasattr(all_eval, \"attrs\") else \"attrs lost on concat\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "4caee13d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pair_idx', 'src_x', 'src_y', 'dst_x', 'dst_y', 'shortest_len_m',\n",
+       "       'shortest_risk_total_sum', 'safe_len_m', 'safe_risk_total_sum',\n",
+       "       'len_constraint_max_m', 'safe_feasible', 'delta_L', 'delta_R', 'eta',\n",
+       "       'eps', 'n_pairs_target'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f1f45955",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/6v/992p8knd6g5flm6m0p856jlw0000gn/T/ipykernel_16423/3311492509.py:7: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  .apply(lambda g: pd.Series({\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eta</th>\n",
+       "      <th>eps</th>\n",
+       "      <th>n_pairs</th>\n",
+       "      <th>feasible_share</th>\n",
+       "      <th>median_delta_L</th>\n",
+       "      <th>iqr_delta_L</th>\n",
+       "      <th>median_delta_R</th>\n",
+       "      <th>iqr_delta_R</th>\n",
+       "      <th>share_delta_R_pos</th>\n",
+       "      <th>median_shortest_len_m</th>\n",
+       "      <th>median_safe_len_m</th>\n",
+       "      <th>median_shortest_risk</th>\n",
+       "      <th>median_safe_risk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.246</td>\n",
+       "      <td>0.451</td>\n",
+       "      <td>76.1</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15092.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.208</td>\n",
+       "      <td>0.401</td>\n",
+       "      <td>75.3</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15097.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.185</td>\n",
+       "      <td>0.363</td>\n",
+       "      <td>75.9</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15092.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.042</td>\n",
+       "      <td>0.377</td>\n",
+       "      <td>0.388</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15461.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.046</td>\n",
+       "      <td>0.331</td>\n",
+       "      <td>0.370</td>\n",
+       "      <td>86.4</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15491.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.028</td>\n",
+       "      <td>0.047</td>\n",
+       "      <td>0.305</td>\n",
+       "      <td>0.345</td>\n",
+       "      <td>86.3</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15470.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>0.425</td>\n",
+       "      <td>0.353</td>\n",
+       "      <td>90.6</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15841.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.047</td>\n",
+       "      <td>0.089</td>\n",
+       "      <td>0.404</td>\n",
+       "      <td>0.323</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15879.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.086</td>\n",
+       "      <td>0.378</td>\n",
+       "      <td>0.318</td>\n",
+       "      <td>91.8</td>\n",
+       "      <td>14881.5</td>\n",
+       "      <td>15879.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   eta   eps  n_pairs  feasible_share  median_delta_L  iqr_delta_L  \\\n",
+       "0  0.0  0.05   1000.0           100.0           0.009        0.026   \n",
+       "1  0.5  0.05   1000.0           100.0           0.008        0.026   \n",
+       "2  1.0  0.05   1000.0           100.0           0.008        0.026   \n",
+       "3  0.0  0.10   1000.0           100.0           0.025        0.042   \n",
+       "4  0.5  0.10   1000.0           100.0           0.026        0.046   \n",
+       "5  1.0  0.10   1000.0           100.0           0.028        0.047   \n",
+       "6  0.0  0.20   1000.0           100.0           0.038        0.072   \n",
+       "7  0.5  0.20   1000.0           100.0           0.047        0.089   \n",
+       "8  1.0  0.20   1000.0           100.0           0.050        0.086   \n",
+       "\n",
+       "   median_delta_R  iqr_delta_R  share_delta_R_pos  median_shortest_len_m  \\\n",
+       "0           0.246        0.451               76.1                14881.5   \n",
+       "1           0.208        0.401               75.3                14881.5   \n",
+       "2           0.185        0.363               75.9                14881.5   \n",
+       "3           0.377        0.388               86.0                14881.5   \n",
+       "4           0.331        0.370               86.4                14881.5   \n",
+       "5           0.305        0.345               86.3                14881.5   \n",
+       "6           0.425        0.353               90.6                14881.5   \n",
+       "7           0.404        0.323               92.0                14881.5   \n",
+       "8           0.378        0.318               91.8                14881.5   \n",
+       "\n",
+       "   median_safe_len_m  median_shortest_risk  median_safe_risk  \n",
+       "0            15092.7                   0.0               0.0  \n",
+       "1            15097.7                   0.0               0.0  \n",
+       "2            15092.7                   0.0               0.0  \n",
+       "3            15461.1                   0.0               0.0  \n",
+       "4            15491.8                   0.0               0.0  \n",
+       "5            15470.0                   0.0               0.0  \n",
+       "6            15841.2                   0.0               0.0  \n",
+       "7            15879.0                   0.0               0.0  \n",
+       "8            15879.0                   0.0               0.0  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def q(x, p):\n",
+    "    return float(np.nanquantile(x, p))\n",
+    "\n",
+    "summary = (\n",
+    "    all_eval\n",
+    "    .groupby([\"eta\", \"eps\"], as_index=False)\n",
+    "    .apply(lambda g: pd.Series({\n",
+    "        \"n_pairs\": int(len(g)),\n",
+    "        \"feasible_share\": float(np.mean(g[\"safe_feasible\"].astype(bool))),\n",
+    "\n",
+    "        \"median_delta_L\": float(np.nanmedian(g[\"delta_L\"])),\n",
+    "        \"iqr_delta_L\": float(q(g[\"delta_L\"], 0.75) - q(g[\"delta_L\"], 0.25)),\n",
+    "\n",
+    "        \"median_delta_R\": float(np.nanmedian(g[\"delta_R\"])),\n",
+    "        \"iqr_delta_R\": float(q(g[\"delta_R\"], 0.75) - q(g[\"delta_R\"], 0.25)),\n",
+    "\n",
+    "        \"share_delta_R_pos\": float(np.mean(g[\"delta_R\"] > 0)),\n",
+    "\n",
+    "        \"median_shortest_len_m\": float(np.nanmedian(g[\"shortest_len_m\"])),\n",
+    "        \"median_safe_len_m\": float(np.nanmedian(g[\"safe_len_m\"])),\n",
+    "\n",
+    "        \"median_shortest_risk\": float(np.nanmedian(g[\"shortest_risk_total_sum\"])),\n",
+    "        \"median_safe_risk\": float(np.nanmedian(g[\"safe_risk_total_sum\"])),\n",
+    "    }))\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "\n",
+    "summary_fmt = summary.copy()\n",
+    "summary_fmt[\"feasible_share\"] = (100 * summary_fmt[\"feasible_share\"]).round(1)\n",
+    "summary_fmt[\"share_delta_R_pos\"] = (100 * summary_fmt[\"share_delta_R_pos\"]).round(1)\n",
+    "\n",
+    "for c in [\"median_delta_L\", \"iqr_delta_L\", \"median_delta_R\", \"iqr_delta_R\"]:\n",
+    "    summary_fmt[c] = summary_fmt[c].round(3)\n",
+    "\n",
+    "for c in [\"median_shortest_len_m\", \"median_safe_len_m\", \"median_shortest_risk\", \"median_safe_risk\"]:\n",
+    "    summary_fmt[c] = summary_fmt[c].round(1)\n",
+    "\n",
+    "summary_fmt = summary_fmt.sort_values([\"eps\", \"eta\"]).reset_index(drop=True)\n",
+    "\n",
+    "summary_fmt\n"
    ]
   }
  ],
