--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -139,3 +139,18 @@ Volume
  volume = {148},
  year = {2020}
 }
+
+@article{NateraOrozco2020,
+  title = {Data-driven strategies for optimal bicycle network growth},
+  volume = {7},
+  ISSN = {2054-5703},
+  url = {http://dx.doi.org/10.1098/rsos.201130},
+  DOI = {10.1098/rsos.201130},
+  number = {12},
+  journal = {Royal Society Open Science},
+  publisher = {The Royal Society},
+  author = {Natera Orozco,  Luis Guillermo and Battiston,  Federico and I{\~n}iguez,  Gerardo and Szell,  Michael},
+  year = {2020},
+  month = dec,
+  pages = {201130}
+}
