--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -138,9 +138,9 @@ safety analysis and routing.\todo{rewrite/edit, when we have final results}
   \centering
   \includegraphics{figs/map_3_panels.pdf}
   \caption{\textbf{Safety-aware routing pipeline for the Berlin cycling network.}
-  Panels (a--c) show an example year (2021) and are zoomed in for readability; see \cref{sec:methods} for formal definitions and notation.
-  (a): Police-recorded bicycle crashes ({\color{TUorange}points}) and street segments with measured cyclist exposure ({\color{TUgray}lines}, used as the base network in all panels).
-  (b): Yearly segment-level relative crash risk; high-risk segments in {\color{TUred}red} correspond to the top 90th percentile of $r_{s,y}$ in the displayed year. {\color{TUdark}Circles} mark junctions (degree $\ge 3$), for which we also estimate junction-level relative risk from exposure aggregated over incident segments.
+  Panels (a--c) are zoomed in for readability; see \cref{sec:methods} for formal definitions and notation.
+  (a): Police-recorded bicycle crashes in June 2021 ({\color{TUorange}points}) and street segments with measured cyclist exposure ({\color{TUgray}lines}, used as the base network in all panels).
+  (b): Pooled segment-level relative crash risk estimated from all available data; high-risk segments in {\color{TUred}red} correspond to the top 90th percentile of relative risk. {\color{TUdark}Circles} mark junctions (degree $\ge 3$), for which we also estimate junction-level relative risk from exposure aggregated over incident segments.
   (c): Shortest path ({\color{TUblue}blue}) versus a safer alternative ({\color{TUgreen}green}) selected to reduce cumulative relative route risk under a distance-detour constraint. {\color{TUocre}Filled circle} and {\color{TUocre}cross} denote origin and destination, respectively; {\color{TUdark}circles} show junctions for reference.
   }
   \label{fig:visual_app}
@@ -365,10 +365,10 @@ modest detours for meaningful safety improvements.
 
 We provide implementation details, hyperparameters, and supplementary material, available at \url{https://github.com/ytobiaz/data_literacy}.
 
-\newpage
+\clearpage
 
 \section*{Contribution Statement}
-% Explain here, in one sentence per person, what each group member contributed. For example, you could write: Max Mustermann collected and prepared data. Gabi Musterfrau and John Doe performed the data analysis. Jane Doe produced visualizations. All authors will jointly wrote the text of the report. Note that you, as a group, a collectively responsible for the report. Your contributions should be roughly equal in amount and difficulty.
+Explain here, in one sentence per person, what each group member contributed. For example, you could write: Max Mustermann collected and prepared data. Gabi Musterfrau and John Doe performed the data analysis. Jane Doe produced visualizations. All authors will jointly wrote the text of the report. Note that you, as a group, a collectively responsible for the report. Your contributions should be roughly equal in amount and difficulty.
 
 % \section*{Notes} 
 % Your entire report has a \textbf{hard page limit of 4 pages} excluding references and the contribution statement. (I.e. any pages beyond page 4 must only contain the contribution statement and references). Appendices are \emph{not} possible. But you can put additional material, like interactive visualizations or videos, on a githunb repo (use \href{https://github.com/pnkraemer/tueplots}{links} in your pdf to refer to them). Each report has to contain \textbf{at least three plots or visualizations}, and \textbf{cite at least two references}. More details about how to prepare the report, inclucing how to produce plots, cite correctly, and how to ideally structure your github repo, will be discussed in the lecture, where a rubric for the evaluation will also be provided.
